added tickets GET endpoints
