# ticket-service/src/main/java/xyz/peasfultown/gottix/ticket_service/entity/TicketEntity.java
@@ -1,19 +1,18 @@
 package xyz.peasfultown.gottix.ticket_service.entity;
 
 import jakarta.persistence.*;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import lombok.*;
 import org.hibernate.annotations.JdbcType;
 import org.hibernate.dialect.PostgreSQLEnumJdbcType;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 
 @Entity
 @Table(name = "ticket")
-@Data
+@Getter
+@Setter
 @NoArgsConstructor
 @AllArgsConstructor
 @Builder
@@ -39,6 +38,7 @@ public class TicketEntity extends BaseEntity {
     @Column(name = "priority", columnDefinition = "ticket_priority", nullable = false)
     @Enumerated(EnumType.STRING)
     @JdbcType(PostgreSQLEnumJdbcType.class)
+    @Builder.Default
     private TicketPriority priority = TicketPriority.LOW;
 
     @Column(name = "customer_id", nullable = false, updatable = false)
@@ -51,14 +51,31 @@ public class TicketEntity extends BaseEntity {
             mappedBy = "ticket",
             cascade = CascadeType.ALL
     )
-    private List<CommentEntity> comments;
+    @Builder.Default
+    private List<CommentEntity> comments = new ArrayList<>();
 
     public enum TicketStatus {
-        OPENED, IN_PROGRESS, RESOLVED, CLOSED
+        OPENED, IN_PROGRESS, RESOLVED, CLOSED;
+
+        public static TicketStatus fromValue(String value) {
+            for (TicketStatus s : TicketStatus.values())
+                if (s.name().equals(value))
+                    return s;
+
+            throw new IllegalArgumentException("unknown ticket status value: " + value);
+        }
     }
 
     public enum TicketPriority {
-        LOW, MEDIUM, HIGH
+        LOW, MEDIUM, HIGH;
+
+        public static TicketPriority fromValue(String value) {
+            for (TicketPriority p : TicketPriority.values())
+                if (p.name().equals(value))
+                    return p;
+
+            throw new IllegalArgumentException("unknown ticket priority value: " + value);
+        }
     }
 
 }
