# ticket-service/src/main/java/xyz/peasfultown/gottix/ticket_service/entity/projection/TicketEntitySummaryProjection.java
@@ -1,0 +1,18 @@
+package xyz.peasfultown.gottix.ticket_service.entity.projection;
+
+import xyz.peasfultown.gottix.ticket_service.entity.TicketEntity;
+
+import java.time.Instant;
+import java.util.UUID;
+
+public interface TicketEntitySummaryProjection {
+    UUID getId();
+    String getTitle();
+    String getDescription();
+    TicketEntity.TicketStatus getStatus();
+    TicketEntity.TicketPriority getPriority();
+    UUID getCustomerId();
+    UUID getAssignedAgentId();
+    Instant getCreatedAt();
+    Instant getUpdatedAt();
+}
